--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@sweetalert2/theme-dark": "^5.0.16",
+    "@vee-validate/i18n": "^4.10.7",
+    "@vee-validate/rules": "^4.10.7",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "pinia": "^2.1.7",
+    "sweetalert2": "^11.10.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
